# Tardis-Downloader

./: .env.example  .gitignore  README.md  pyproject.toml
.specstory/history/: 2025-09-17_01-54Z-使用-td-fire-cli-整合下載功能.md  2025-09-17_05-58Z-整理-data-schema-的-csv-schema.md  2025-09-17_07-01Z-integrate-download-feature-into-streamlit-page.md  2025-09-17_07-15Z-判斷日期範圍的包含性.md  2025-09-17_07-18Z-如何將命令設置為啟動腳本.md  2025-09-17_07-28Z-補充-data-manager-py-中的-data-type.md  2025-09-17_07-30Z-增加變更檢測功能.md  2025-09-17_07-45Z-展示如何安裝-cli-工具.md  2025-09-17_08-18Z-set-paths-based-on-project-or-package.md  2025-09-17_09-00Z-如何解决-streamlit-app-中的-runtimeerror.md  2025-09-17_09-53Z-streamlit-page-for-exchange-detail-analysis.md  2025-09-17_10-05Z-更新当前的exchange-list.md  2025-09-17_10-17Z-整理-tardisapi-class-的-api-呼叫.md  2025-09-17_10-36Z-給tardisapi添加可選緩存.md  2025-09-17_12-28Z-implement-date-range-without-source-data.md  2025-09-17_12-56Z-fix-asyncio-error-in-jupyter-notebook.md
.specstory/others/: test_cache.py
docs/: data-schema-chatgpt.md  data-schema-original.md  data-soruces-of-perpetuals.md  data-types.md
docs/Our/CLI/: td-fire.md
examples/chatgpt/: tardis_capacity_estimator.py
examples/cli/: README.md
examples/official/: README.md  download.sh  full_example_csv.py  simple_example_csv.py
files/: exchanges_2025-09-17.json
notebooks/: batch_download.ipynb
src/tardis_data_downloader/cli/: fire_download_wrapper.py  tardis_data_downloader.py
src/tardis_data_downloader/data/: data_manager.py  models.py  utils.py
src/tardis_data_downloader/ui/: Overview.py  main.py  (+3 more)
(+10 files in other folders)
